# 3rdparty

./: .gitattributes  README.md  dependence.cmake
aimet/v2.2.0/src/aimet-2.2.0/: CMakeLists.txt
asan/symbolization_tool/: README.md  asan_symbolize.py
boost/v1.65.1/lib/linux-x86_64/: libboost_container.so.1.65.1  libboost_context.so.1.65.1  libboost_coroutine.so.1.65.1  libboost_fiber.so.1.65.1  libboost_graph.so.1.65.1  libboost_iostreams.so.1.65.1  libboost_locale.so.1.65.1  libboost_log.so.1.65.1  libboost_log_setup.so.1.65.1  libboost_math_c99.so.1.65.1  libboost_math_c99f.so.1.65.1  libboost_math_c99l.so.1.65.1  libboost_math_tr1.so.1.65.1  libboost_math_tr1f.so.1.65.1  libboost_math_tr1l.so.1.65.1  libboost_prg_exec_monitor.so.1.65.1  libboost_random.so.1.65.1  libboost_regex.so.1.65.1  libboost_serialization.so.1.65.1  libboost_signals.so.1.65.1  libboost_stacktrace_addr2line.so.1.65.1  libboost_stacktrace_backtrace.so.1.65.1  libboost_stacktrace_basic.so.1.65.1  libboost_stacktrace_noop.so.1.65.1  libboost_timer.so.1.65.1  libboost_type_erasure.so.1.65.1  libboost_unit_test_framework.so.1.65.1  libboost_wave.so.1.65.1  libboost_wserialization.so.1.65.1
boost/v1.86.0/lib/linux-x86_64/: libboost_atomic.so.1.86.0  libboost_charconv.so.1.86.0  libboost_chrono.so.1.86.0  libboost_container.so.1.86.0  libboost_context.so.1.86.0  libboost_contract.so.1.86.0  libboost_coroutine.so.1.86.0  libboost_date_time.so.1.86.0  libboost_fiber.so.1.86.0  libboost_filesystem.so.1.86.0  libboost_graph.so.1.86.0  libboost_iostreams.so.1.86.0  libboost_json.so.1.86.0  libboost_locale.so.1.86.0  libboost_log.so.1.86.0  libboost_log_setup.so.1.86.0  libboost_math_c99.so.1.86.0  libboost_math_c99f.so.1.86.0  libboost_math_c99l.so.1.86.0  libboost_math_tr1.so.1.86.0  libboost_math_tr1f.so.1.86.0  libboost_math_tr1l.so.1.86.0  libboost_nowide.so.1.86.0  libboost_numpy39.so.1.86.0  libboost_prg_exec_monitor.so.1.86.0  libboost_process.so.1.86.0  libboost_program_options.so.1.86.0  libboost_python39.so.1.86.0  libboost_random.so.1.86.0  libboost_regex.so.1.86.0  libboost_serialization.so.1.86.0  libboost_stacktrace_addr2line.so.1.86.0  libboost_stacktrace_backtrace.so.1.86.0  libboost_stacktrace_basic.so.1.86.0  libboost_stacktrace_from_exception.so.1.86.0  libboost_stacktrace_noop.so.1.86.0  libboost_system.so.1.86.0  libboost_thread.so.1.86.0  libboost_timer.so.1.86.0  libboost_type_erasure.so.1.86.0  (+4 more)
ceres-solver/v2.1.0/compiler/: README.md  build.sh
ceres-solver/v2.1.0/compiler/scripts/: build-ax620a-arm7-release.sh  build-mac-x86_64-release.sh
ceres-solver/v2.2.0/compiler/: .gitignore
ceres-solver/v2.2.0/compiler/scripts/: build-mac-x86_64-release.sh
dmabufheap/: dmabufheap.cmake
dmabufheap/include/BufferAllocator/: BufferAllocator.h
dmabufheap/include/android-base/: unique_fd.h
dmabufheap/include/linux/: ion_4.12.h
eigen/v3.4.0/: README.md
fastcv/: CMakeLists.txt  arm-unknown-nto-qnx700eabi.toolchain.cmake  build.sh
fastcv/include/: fastcv.h  fastcvExt.h  fastcv_.h
fastcv/src/: fastcvSimpleTest.cpp  main.cpp
gtest/: README.md  gtest.cmake
gtest/compiler/: .gitignore  build.sh
gtest/compiler/scripts/: build-mac-x86_64-debug.sh  build-mac-x86_64-release.sh
gtest/src/googletest-release-v1.11.0/googletest/: CMakeLists.txt
ion/: ion.cmake
ion/include/: mtk_ion.h
json/: build.sh
json/include/json/: config.h  reader.h  writer.h
json/src/: CMakeLists.txt  json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
ncnn/20240820/: README.md
ncnn/20240820/compiler/cmake/: arm-linux-arm7-aixin.toolchain.cmake
ncnn/20240820/compiler/cmake_args/: options.txt
opencl/: opencl.cmake
opencv/: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  README_中文.md  opencv.cmake
opencv/.claude/: settings.local.json
opencv/compiler/: .gitignore  BUILDING_GUIDE.md  CHANGELOG.md  README.md  build-opencv.sh  build-unified.sh  build.sh
opencv/compiler/cmake_args/: android_options.txt  common_options.txt  embedded_options.txt  host_options.txt
opencv/compiler/docs/: Android-ARM64-Build-Guide.md  DOCUMENTATION-INDEX.md  FILE_LIST.md  OpenCV_Build_Documentation_zh.md  QUICK-START.md  QUICK_START.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  android_配置说明.txt  build-android-armv8a-release.sh  compilation_guide.md  embedded_配置说明.txt  host_配置说明.txt  testing_guide.md  中文文档完成说明.md  工程结构.md  快速开始.md  文档索引.md  文档结构说明.md
opencv/compiler/docs/examples/: BasicImageProcessor.java  CMakeLists.txt  FaceDetection.java  README.md  native-lib.cpp
opencv/compiler/scripts/: build-android-arm64-v8a-release.sh  build-android-armv8a-release.sh  build-mac-x86_64-release.sh
osqp_eigen/v0.8.1/lib/linux-x86_64/: libOsqpEigen.so.0.8.1
qnn/v1.15.0/: NOTICE  README  ReleaseNotes.txt
qnn/v1.15.0/benchmarks/: inceptionV3_qnx_sample.json  inceptionV3_quantized_sample.json  inceptionV3_sample.json  qnn_bench.py
qnn/v1.15.0/benchmarks/bm_utils/: bm_bm.py  bm_config.py  bm_config_restrictions.py  bm_constants.py  bm_device.py  bm_jsonkeys.py  bm_md5.py  bm_parser.py  bm_writer.py  qnnbm_artifacts.json  qnnbm_artifacts_aarch64_linux_oe_gcc82.json  qnnbm_artifacts_aarch64_linux_oe_gcc93.json  qnnbm_artifacts_android_aarch64.json  qnnbm_artifacts_qnx_aarch64.json
qnn/v1.15.0/benchmarks/common_utils/: adb.py  common.py
qnn/v1.15.0/docs/: genindex.html  index.html  search.html  searchindex.js
qnn/v1.15.0/docs/HTP/: htp_core_headers.html  implementing_ops.html  optimization_grammar.html  relu_example.html  relu_fp16_example.html  scheduling_and_allocation.html  scratch_buffer.html  tensors_and_memory_layout.html  writing_op_package.html
qnn/v1.15.0/docs/OpDef/: CpuOpDefSupplement.html  DspOpDefSupplement.html  GpuOpDefSupplement.html  HtaOpDefSupplement.html  HtpOpDefSupplement.html  Htp_fp16OpDefSupplement.html  MasterOpDef.html  (+1 more)
qnn/v1.15.0/include/: QnnBackend.h  QnnCommon.h  QnnContext.h  QnnGraph.h  QnnInterface.h  QnnLog.h  QnnMem.h  QnnOpDef.h  QnnOpPackage.h  QnnProfile.h  QnnProperty.h  QnnSdkBuildId.h  QnnTensor.h  QnnTypes.h
(+1687 files in other folders)
